--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #151739;
-    color: white;
+    font-family: var(--font);
+    background-color: var(--main-bg-color);
+    color: var(--text-color);
     margin: 0;
     padding: 0;
 }
@@ -17,7 +17,7 @@ body {
 #dialogueBox {
     visibility: hidden;
     align-self: center;  
-    border: 2px solid white;
+    border: 2px solid var(--border_color);
     padding: 1em;
     margin: 2em;  
 }
